[workspace]
members = ["bugle", "dynabus", "dynabus-derive", "ini-persist", "ini-persist-derive"]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.75.0"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-pc-windows-msvc"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
